# SoftwareRenderer

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  frame.h  input.h  r_math.h  renderer.h  screen.h  texture.h
include/glad/: glad.h
shaders/: default_fb.frag  default_fb.vert
src/: camera.cpp  frame.cpp  glad.c  input.cpp  main.cpp  r_math.cpp  renderer.cpp  texture.cpp
